# ml_classifiers

./: CMakeLists.txt  README.md  ml_classifiers.cc  ml_classifiers.h  ml_classifiers.py
dataset-scripts/: .directory  dataset-concatenate.py  dataset-preprocessing.py  dataset-stats.py
joblibs/: clf_ab.joblib  clf_bnb.joblib  clf_dt.joblib  clf_gnb.joblib  clf_rf.joblib  clf_svc.joblib  scaler.joblib
joblibs/old-joblibs/: clf_ab.joblib  clf_dt.joblib  clf_gnb.joblib  clf_rf.joblib  clf_svc.joblib  scaler.joblib
jupyter-notebooks/: .directory  AdaBoost.csv  Bernoulli NB.csv  Decision Tree.csv  Gaussian NB.csv  Linear SVC.csv  Random Forest.csv  formatter.ipynb  results.txt  results_gs.txt
tmp/: timeouted_connections.txt
